# pyzero

./: .dockerignore  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
docker/: base.dockerfile  cuda.dockerfile
examples/: builtins.py  nth_fibonacci.py  risc0_sha256.py  sys.py
journal-parser/: Cargo.toml
journal-parser/src/: lib.rs
nix/: wasm-bindgen-cli.nix
pyzero/: Cargo.toml
pyzero-core/: Cargo.toml
pyzero-core/methods/: Cargo.toml  interface.rs
pyzero-core/methods/guest/: Cargo.toml  rustfmt.toml
pyzero-core/methods/guest/src/: main.rs
pyzero-core/methods/guest/src/sys/: mod.rs  risc0.rs  stdout.rs
pyzero-core/src/: guest_interface.rs  lib.rs  manifest.rs  proof.rs  prove.rs  result.rs  verify.rs
pyzero-verify/: Cargo.toml
pyzero-verify/src/: cli.rs  main.rs
pyzero/src/: cli.rs  lib.rs  main.rs  redactions.rs
web-verifier/: Cargo.toml  Justfile
web-verifier/src/: lib.rs
