[workspace]
members = [
    "pyzero",
    "pyzero-core",
    "pyzero-core/methods",
    "pyzero-verify"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
itertools = "0.12"
risc0-build = "0.20.1"
risc0-zkvm = { version = "0.20.1", features = ["getrandom"] }
serde = "1.0"
serde_json = "1.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
