[package]
name = "pyzero-core"
version = "0.0.0"
edition = "2021"

[features]
prove = []
verify = []
cuda = ["prove", "risc0-zkvm/cuda"]

[dependencies.pyzero-methods]
path = "./methods"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }