[package]
name = "pyzero-web-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = { workspace = true }
risc0-zkvm = { version = "0.20.1", default-features = false }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
